resolved navbar bug on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -11,7 +11,7 @@
   &--active {
     height: 100vh;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
   }
